tests/paczka1/fuzzy1/70502718.err
Error in line 4: n29oXStq S354 50,1
Error in line 5: n29oXStq A336 68,4
Error in line 19: n29oXStq S354 26,4
Error in line 15: Nb5tmIw S354 146,9
Error in line 33: wkljrS S581 70,3
Error in line 35: wkljrS A336 39,6
Error in line 32: 1NI7cJ S90 37,6
Error in line 39: AwNYNzTDKwm S354 -1,8
